--- a/LibHttpCommon/src/main/AndroidManifest.xml
+++ b/LibHttpCommon/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.http.common" />
+    package="com.bihe0832.android.lib.http.common" />
