--- a/LibWebview/build.gradle
+++ b/LibWebview/build.gradle
@@ -33,6 +33,6 @@ publish {
     userOrg = rootProject.zixieUserOrg
     groupId = rootProject.zixieGroupId
     licences = rootProject.zixieLicences
-    desc = 'the base zip utils for zixie'//项目描述
+    desc = 'the base webview based on x5 for zixie'//项目描述
     website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
 }
