--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "APPTest"
+ext.mainProject = "LibAndroid"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite"
  */
-ext.developModule = "LibAndroid,LibHttpCommon,LibLog,LibTimer,LibWebview"
+ext.developModule = "LibAndroid"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -90,7 +90,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibAndroid"                : [
-                "version"            : "2.5.10",
+                "version"            : "2.6.0",
                 "artifactId"         : "lib-android",
                 "apidependenciesList": [
                         "com.android.support:appcompat-v7:${project.android_support_version}",
