--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibOS"
+ext.mainProject = "LibFragmentation_core"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite"
  */
-ext.developModule = "LibOS"
+ext.developModule = "LibFragmentation_core"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -223,7 +223,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibAndroid", "LibLog"]
         ],
         "LibFragmentation_core"     : [
-                "version"            : "2.5.10",
+                "version"            : "2.6.0",
                 "artifactId"         : "lib-fragmentation-core",
                 "apidependenciesList": ["LibCommonUIUtils"]
         ],
