--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "CommonFeedback"
+ext.mainProject = "LibFile"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite"
  */
-ext.developModule = "CommonFeedback"
+ext.developModule = "LibFile"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -57,14 +57,14 @@ ext.moduleInfo = [
                 ]
         ],
         "CommonNetwork"            : [
-                "version"            : "3.2.2",
+                "version"            : "3.2.1",
                 "artifactId"         : "common-network",
                 "apidependenciesList": [
                         "Framework"
                 ]
         ],
         "CommonWebview"            : [
-                "version"            : "3.2.2",
+                "version"            : "3.2.1",
                 "artifactId"         : "common-webview",
                 "apidependenciesList": [
                         "Framework"
@@ -76,7 +76,7 @@ ext.moduleInfo = [
                 ]
         ],
         "CommonFeedback"            : [
-                "version"            : "3.2.2",
+                "version"            : "3.2.1",
                 "artifactId"         : "common-feedback",
                 "apidependenciesList": [
                         "CommonWebview"
@@ -88,14 +88,14 @@ ext.moduleInfo = [
                 ]
         ],
         "CommonPraise"              : [
-                "version"            : "3.2.2",
+                "version"            : "3.2.1",
                 "artifactId"         : "common-praise",
                 "apidependenciesList": [
                         "Framework"
                 ]
         ],
         "Framework"                 : [
-                "version"            : "3.2.2",
+                "version"            : "3.2.1",
                 "artifactId"         : "framework",
                 "apidependenciesList": [
                         "com.android.support:multidex:1.0.0",
@@ -103,7 +103,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibWrapper"                : [
-                "version"            : "3.2.2",
+                "version"            : "3.2.1",
                 "artifactId"         : "lib-wrapper",
                 "apidependenciesList": ["LibUtils", "LibUIUtils"]
         ],
@@ -117,7 +117,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibUtils"                  : [
-                "version"            : "3.2.2",
+                "version"            : "3.2.1",
                 "artifactId"         : "lib-utils",
                 "apidependenciesList": [
                         "Router", "RouterAnnotation", "LibCommonUtils", "LibChannel", "LibTimer", "LibRequest",
@@ -259,7 +259,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibLog", "LibThread"]
         ],
         "LibDownloadAndInstall"     : [
-                "version"            : "3.2.2",
+                "version"            : "2.7.1",
                 "artifactId"         : "lib-download-install",
                 "apidependenciesList": ["LibFile", "LibZip", "LibRequest", "LibThread"]
         ],
