--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,12 +6,12 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "LibFile"
+ext.mainProject = "LibDownloadAndInstall"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite"
  */
-ext.developModule = "LibFile"
+ext.developModule = "LibDownloadAndInstall"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -259,7 +259,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibLog", "LibThread"]
         ],
         "LibDownloadAndInstall"     : [
-                "version"            : "2.7.1",
+                "version"            : "3.2.3",
                 "artifactId"         : "lib-download-install",
                 "apidependenciesList": ["LibFile", "LibZip", "LibRequest", "LibThread"]
         ],
