--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -7,14 +7,16 @@ plugins {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-
+    compile 'com.bihe0832.android:lib-wrapper:3.2.8'
     compile 'com.android.tools.build:gradle:3.2.1'
     compile group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
 }
 
 allprojects {
     repositories {
-        google()
+        maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
+        maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
+        maven { url "https://dl.bintray.com/bihe0832/android" }
         jcenter()
     }
 }
