--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -44,6 +44,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/activityTheme"></activity>
 
+        <activity
+            android:name=".module.card.TestListActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/activityTheme"></activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.bihe0832.test"
