--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext.mainProject = "APPTest"
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,Application,Framework"
  */
-ext.developModule = "LibWebview"
+ext.developModule = "LibConfig"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -232,7 +232,10 @@ ext.moduleInfo = [
         "LibConfig"                 : [
                 "version"            : "2.7.1",
                 "artifactId"         : "lib-config",
-                "apidependenciesList": ["LibCommonUtils"]
+                "apidependenciesList": [
+                        "LibCommonUtils",
+                        "com.tencent:mmkv-static:1.2.5"
+                ]
         ],
         "LibAPK"                    : [
                 "version"            : "2.7.1",
