--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "APPTest"
+ext.mainProject = "LibDownloadAndInstall"
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,Application,Framework"
@@ -27,7 +27,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "3.2.27"
+ext.moduleVersionName = "3.2.28"
 /************************************ 组件化开发常用配置 ************************************/
 
 ext.moduleInfo = [
@@ -262,7 +262,7 @@ ext.moduleInfo = [
                 "apidependenciesList": ["LibLog", "LibThread"]
         ],
         "LibDownloadAndInstall"     : [
-                "version"            : "3.2.19",
+                "version"            : "3.2.28",
                 "artifactId"         : "lib-download-install",
                 "apidependenciesList": ["LibFile", "LibZip", "LibRequest", "LibThread"]
         ],
