--- a/build_module.gradle
+++ b/build_module.gradle
@@ -129,7 +129,7 @@ def getPublishCommand() {
         System.err.println("运行后升级版本的组件有：\n\n\t" + moduleList)
         System.err.println("\n发布使用的命令： \n\n")
 
-        System.err.println("git checkout -b build_temp && echo \"" + resultList + "\"  | xargs -I {} /bin/bash ./build_upload.sh {} " + zixieVersionName +" && git checkout master && git merge build_temp --squash")
+        System.err.println("git checkout -b build_temp && echo \"" + resultList + "\"  | xargs -I {} /bin/bash ./build_upload.sh {} " + zixieVersionName +" && git checkout master && git merge build_temp --squash -m'auto update to version ${zixieVersionName} by build.sh'")
         System.err.println("\n\n========================================\n\n")
     } else {
         System.err.println("组件依赖关系处理已完成，没有组件需要更新...")
