--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext.mainProject = "APPTest"
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
  * 当前如果全量填"LibAndroid,LibThread,LibRequest,LibSqlite,Application,Framework"
  */
-ext.developModule = "Framework"
+ext.developModule = "LibDialog"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -48,7 +48,11 @@ ext.moduleInfo = [
                 "version"                : "",
                 "artifactId"             : "",
                 "apidependenciesList"    : [
-                        "CommonPraise", "CommonFeedback", "CommonWebview", "CommonNetwork"
+                        "CommonPraise", "CommonFeedback", "CommonWebview", "CommonNetwork",
+                        'com.squareup.okhttp3:okhttp:3.9.1',
+                        'com.squareup.okhttp3:logging-interceptor:3.8.0',
+                        'com.squareup.retrofit2:retrofit:2.4.0',
+                        'com.squareup.retrofit2:converter-gson:2.4.0',
                 ],
                 "specialdependenciesList": [
                         "kapt": [
